--- a/registration.html
+++ b/registration.html
@@ -288,22 +288,19 @@
             <div class="container-fluid">
                 <div class="row margin0 footrcontent">
                     <div class="col-lg-3 col-md-6">
-                        <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
-                            style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                        <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
                             <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                            <p>Don’t miss any updates of our new templates and extensions.!</p>
-                            <form action="#" class="f_subscribe_two mailchimp global_centr_align" method="post"
-                                novalidate="true" _lpchecked="1">
+                            <p>Know more about vedantpay and its working.!</p>
+                            <form action="#" class="f_subscribe_two mailchimp global_centr_align" method="post" novalidate="true" _lpchecked="1">
                                 <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                                <button class="btn btn_get btn_get_two" type="submit">Submit</button>
                                 <p class="mchimp-errmessage" style="display: none;"></p>
                                 <p class="mchimp-sucmessage" style="display: none;"></p>
                             </form>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.4s"
-                            style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
                             <h3 class="f-title f_600 t_color f_size_18">Download</h3>
                             <ul class="list-unstyled f_list">
                                 <li><a href="#">Company</a></li>
@@ -316,8 +313,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.6s"
-                            style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
                             <h3 class="f-title f_600 t_color f_size_18">Help</h3>
                             <ul class="list-unstyled f_list">
                                 <li><a href="#">FAQ</a></li>
@@ -330,15 +326,13 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="f_widget social-widget pl_70 wow fadeInLeft global_centr_align"
-                            data-wow-delay="0.8s"
-                            style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                            <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+                        <div class="f_widget social-widget pl_70 wow fadeInLeft global_centr_align" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Get social with us</h3>
                             <div class="f_social_icon">
-                                <a href="#" class="fab fa-facebook"></a>
-                                <a href="#" class="fab fa-twitter"></a>
-                                <a href="#" class="fab fa-linkedin"></a>
-                                <a href="#" class="fab fa-pinterest"></a>
+                                <a href="#" class="fa fa-facebook"></a>
+                                <a href="#" class="fa fa-twitter"></a>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <a href="#" class="fa fa-pinterest"></a>
                             </div>
                         </div>
                     </div>
@@ -353,9 +347,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-sm-7">
-                        <p class="mb-0 f_400 global_centr_align">©Copyright | vedantpay.com 2021 All rights
-                            reserved.
-                        </p>
+                        <p class="mb-0 f_400 global_centr_align">©Copyright | vedantpay.com 2021 All rights reserved.</p>
                     </div>
                     <div class="col-lg-6 col-sm-5 text-right global_centr_align">
                         <p>Designed By | <a href="#">Kartik Technology & Team</a></p>
