--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
         <div class="col-lg-6 d-none d-lg-block"></div>
       </div>
     </div>
-    <div class="container-fluid m-2 mx-auto" >
+    <div class="container-fluid my-2 mx-auto" >
       <div class="row h-100 align-items-center margin0" style="padding-top: 0px!important;padding-bottom: 0px!important">
         <div class="col-lg-12  py-0 m-0 text-center">
           <img class="img-fluid my-0 py-0" style="width: 80%;"
